Implemented XML input and output support along with YAML output support (input support was in long ago). That also means different output support in general is implemented. See the changelog for details. Neither XML or YAML output are implemented to the extent of being able to create them arbitrarily (due to features that make both of them unique from JSON and wouldn't map without loss of information), but as far as I should be concerned, it's good enough. Compressed output works for all of them as well. Again, test cases and readme are what's left, then I'm going to try to work on the report.

--- a/tridydb-cli/.vscode/launch.json
+++ b/tridydb-cli/.vscode/launch.json
@@ -4,10 +4,36 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Test File (Development)",
+            "name": "Launch Test File (Development) (default JSON output)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty"],
+            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "json"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Test File (Development) (YAML output)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "yaml"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Test File (Development) (XML output)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "xml", "--tags-key", "tag", "--tree-key", "module"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -27,10 +53,36 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Test Console (Development)",
+            "name": "Launch Test Console (Development) (default JSON output)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty"],
+            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "json"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Test Console (Development) (YAML output)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "yaml"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Test Console (Development) (XML output)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "xml", "--tags-key", "tag", "--tree-key", "module"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -96,10 +148,36 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Server (Development)",
+            "name": "Launch Server (Development) (default JSON output)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug"],
+            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--format", "json"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Server (Development) (YAML output)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--format", "yaml"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Server (Development) (XML output)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--format", "xml", "--tags-key", "tag", "--tree-key", "module"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
