--- a/tridydb-cli/package.json
+++ b/tridydb-cli/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "seedrandom": "^3.0.5",
     "uuid-random": "^1.3.2",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "jsdoc": "^3.6.10"
