Added the additional @get parameters, including for format (@json, @xml, etc.), indentation, etc, and changed some of the program arguments to match. Had to rework the output behavior since by default, it originally presented the results of one string of commands in an array specific to whatever format the program or query() was set to use (since it was one-run-one-format before, but making Tridy useful as a kind of scripting language with import/export to any format will have different requirements). Since a single run can now produce output in multiple formats, it can't try to send an XML tag directly inside a JSON list, for instance, and sending output 'nested as strings' doesn't look pretty. The output behavior's a little smarter now, and also will return one-element output arrays as just their element by default (without @list) now.

--- a/tridydb-cli/.vscode/launch.json
+++ b/tridydb-cli/.vscode/launch.json
@@ -4,36 +4,10 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Test File (Development) (default JSON output)",
+            "name": "Launch Test File (Development)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "json"],
-            "outputCapture": "std",
-            "console": "externalTerminal",
-            "env": {
-                "NODE_ENV": "development"
-            }
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Test File (Development) (YAML output)",
-            "program": "${workspaceFolder}/src/app.js",
-            "cwd": "${workspaceFolder}/",
-            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "yaml"],
-            "outputCapture": "std",
-            "console": "externalTerminal",
-            "env": {
-                "NODE_ENV": "development"
-            }
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Test File (Development) (XML output)",
-            "program": "${workspaceFolder}/src/app.js",
-            "cwd": "${workspaceFolder}/",
-            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "xml", "--tags-key", "tag", "--tree-key", "module"],
+            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--default-indent", "4"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -53,36 +27,10 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Test Console (Development) (default JSON output)",
+            "name": "Launch Test Console (Development)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "json"],
-            "outputCapture": "std",
-            "console": "externalTerminal",
-            "env": {
-                "NODE_ENV": "development"
-            }
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Test Console (Development) (YAML output)",
-            "program": "${workspaceFolder}/src/app.js",
-            "cwd": "${workspaceFolder}/",
-            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "yaml"],
-            "outputCapture": "std",
-            "console": "externalTerminal",
-            "env": {
-                "NODE_ENV": "development"
-            }
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Test Console (Development) (XML output)",
-            "program": "${workspaceFolder}/src/app.js",
-            "cwd": "${workspaceFolder}/",
-            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--pretty", "--format", "xml", "--tags-key", "tag", "--tree-key", "module"],
+            "args": ["console", "--file", "src/tests/_debug/test.tri", "--log-level", "debug", "--default-indent", "4"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -105,7 +53,7 @@
             "name": "Launch Client Test File (Development)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--client", "--log-level", "debug", "--pretty"],
+            "args": ["inline", "--file", "src/tests/_debug/test.tri", "--client", "--log-level", "debug", "--default-indent", "4"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -128,7 +76,7 @@
             "name": "Launch Client Test Console (Development)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["console", "--file", "src/tests/_debug/test.tri", "--client", "--log-level", "debug", "--pretty"],
+            "args": ["console", "--file", "src/tests/_debug/test.tri", "--client", "--log-level", "debug", "--default-indent", "4"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -148,36 +96,10 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Server (Development) (default JSON output)",
+            "name": "Launch Server (Development)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--format", "json"],
-            "outputCapture": "std",
-            "console": "externalTerminal",
-            "env": {
-                "NODE_ENV": "development"
-            }
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Server (Development) (YAML output)",
-            "program": "${workspaceFolder}/src/app.js",
-            "cwd": "${workspaceFolder}/",
-            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--format", "yaml"],
-            "outputCapture": "std",
-            "console": "externalTerminal",
-            "env": {
-                "NODE_ENV": "development"
-            }
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Server (Development) (XML output)",
-            "program": "${workspaceFolder}/src/app.js",
-            "cwd": "${workspaceFolder}/",
-            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--format", "xml", "--tags-key", "tag", "--tree-key", "module"],
+            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--default-indent", "4"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
