Added file import functionality, both for importing Tridy scripts and raw JSONs/etc. via. the @import command and @file parameter for raw input, respectively. Had to refactor some for this, which ended with me deciding (namely) to limit @exit and @clear's functionality to console mode. I suppose they'd have some use inside of scripts, and especially @exit, which isn't hard to keep with @import like @clear is (still awkward inside scripts, though). However, I've kept Tridy to a low programming style so far - no loops or other control flow manipulation tactics - and it's probably better I keep it that way lest it become as complex or verbose as these other languages. Also added options to control the availability of server submodes, considering as only syntax tree mode seems to be secure, let alone useful (the client uses this), while verbatim and RESTful mode are questionable.

--- a/tridydb-cli/.vscode/launch.json
+++ b/tridydb-cli/.vscode/launch.json
@@ -99,7 +99,7 @@
             "name": "Launch Server (Development)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
-            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug"],
+            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--server-allow-verbatim", "--server-allow-restful"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
