Added export functionality (as yet more @get parameters). @split was also added to replace @new and @next as @get parameters (yeah, not the operation @new, so that could have gotten confusing). I'm not sure whether to call it quits at this point for time reasons, and just move to more of the report and/or get to working on creating example configurations. I know I won't get time to perform extended testing or documentation before August, but I also thought so originally. There's still a lot I feel the need to do; 'function modules' for generating random text (like passwords), arbitrary configuration output formatting (for .confs, .inis, etc.), nested output formatting for placing variables into script templates (something that Habitat would have originally done) - it just goes on, which I guess both shows how much potential I'm either resting on, or how weak my abilities to plan are. I'm increasingly faithless I won't be done even by the beginning of August, but I guess this is something I've already planned on doing long-term (after the program) anyway.

--- a/tridydb-cli/.vscode/launch.json
+++ b/tridydb-cli/.vscode/launch.json
@@ -109,6 +109,19 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Launch Server (Development) (Preformatting)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["server", "--file", "src/tests/_debug/test.tri", "--localhost", "--log-level", "debug", "--server-allow-verbatim", "--server-allow-restful", "--server-preformat"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Launch Server (Production)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
